--- a/AlertModule/ModalAlert/AlertViewController.storyboard
+++ b/AlertModule/ModalAlert/AlertViewController.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Lulo Alert View Controller-->
+        <!--Alert View Controller-->
         <scene sceneID="S95-70-VKf">
             <objects>
-                <viewController storyboardIdentifier="LuloAlertViewController" id="FJ6-MQ-Qsh" customClass="LuloAlertViewController" customModule="AlertModule" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AlertViewController" id="FJ6-MQ-Qsh" customClass="AlertViewController" customModule="AlertModule" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e8b-jV-Rgd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
