--- a/AlertModule/ModalAlert/AlertViewController.storyboard
+++ b/AlertModule/ModalAlert/AlertViewController.storyboard
@@ -16,27 +16,102 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <visualEffectView opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xL-SH-2OW">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZTk-lW-3Ii">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.59999999999999998" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZTk-lW-3Ii">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
+                            <view opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.60000002384185791" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruk-Ft-FHQ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alert" translatesAutoresizingMaskIntoConstraints="NO" id="2Tm-Uu-Fbb">
+                                        <rect key="frame" x="182" y="66" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="7qB-Yk-GSD"/>
+                                            <constraint firstAttribute="height" constant="50" id="IGo-XQ-Pr1"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qn4-0M-5IJ">
+                                        <rect key="frame" x="0.0" y="124" width="414" height="596"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="879-sr-Bzz">
+                                                <rect key="frame" x="186" y="0.0" width="42" height="198.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ee-f0-Kly">
+                                                <rect key="frame" x="186" y="198.5" width="42" height="199"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CYH-EX-ncx">
+                                                <rect key="frame" x="186" y="397.5" width="42" height="198.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uL5-Tp-40L">
+                                        <rect key="frame" x="0.0" y="742" width="414" height="76"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1HH-65-PiO">
+                                                <rect key="frame" x="103.5" y="0.0" width="207" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaG-pX-Uuy">
+                                                <rect key="frame" x="103.5" y="46" width="207" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="1HH-65-PiO" firstAttribute="width" secondItem="uL5-Tp-40L" secondAttribute="width" multiplier="0.5" id="gQv-T8-HG1"/>
+                                            <constraint firstItem="kaG-pX-Uuy" firstAttribute="width" secondItem="1HH-65-PiO" secondAttribute="width" id="rbH-zc-27W"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="qn4-0M-5IJ" secondAttribute="trailing" id="CeO-BL-9Yd"/>
+                                    <constraint firstItem="qn4-0M-5IJ" firstAttribute="leading" secondItem="ruk-Ft-FHQ" secondAttribute="leading" id="HRD-W8-Kd7"/>
+                                    <constraint firstItem="qn4-0M-5IJ" firstAttribute="top" secondItem="2Tm-Uu-Fbb" secondAttribute="bottom" constant="8" id="IN2-X0-Cqz"/>
+                                    <constraint firstAttribute="bottom" secondItem="uL5-Tp-40L" secondAttribute="bottom" constant="78" id="Iqf-jH-8GM"/>
+                                    <constraint firstItem="uL5-Tp-40L" firstAttribute="leading" secondItem="ruk-Ft-FHQ" secondAttribute="leading" id="LWw-p1-1C1"/>
+                                    <constraint firstAttribute="trailing" secondItem="uL5-Tp-40L" secondAttribute="trailing" id="Mkf-Qa-UIH"/>
+                                    <constraint firstItem="uL5-Tp-40L" firstAttribute="top" secondItem="qn4-0M-5IJ" secondAttribute="bottom" constant="22" id="dAn-2o-F8D"/>
+                                    <constraint firstItem="2Tm-Uu-Fbb" firstAttribute="centerX" secondItem="ruk-Ft-FHQ" secondAttribute="centerX" id="qsh-cu-8kq"/>
+                                    <constraint firstItem="uL5-Tp-40L" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qn4-0M-5IJ" secondAttribute="bottom" priority="999" constant="22" id="wJ5-1P-LWe"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="n2J-vm-W3g" firstAttribute="bottom" secondItem="6xL-SH-2OW" secondAttribute="bottom" constant="-34" id="2cY-80-wqO"/>
-                            <constraint firstItem="6xL-SH-2OW" firstAttribute="top" secondItem="n2J-vm-W3g" secondAttribute="top" id="5z1-hH-hFX"/>
+                            <constraint firstItem="6xL-SH-2OW" firstAttribute="top" secondItem="n2J-vm-W3g" secondAttribute="top" constant="-44" id="5z1-hH-hFX"/>
                             <constraint firstItem="6xL-SH-2OW" firstAttribute="leading" secondItem="n2J-vm-W3g" secondAttribute="leading" id="COh-3N-OYh"/>
+                            <constraint firstItem="ruk-Ft-FHQ" firstAttribute="trailing" secondItem="n2J-vm-W3g" secondAttribute="trailing" id="KEy-Bc-pT2"/>
                             <constraint firstItem="n2J-vm-W3g" firstAttribute="trailing" secondItem="6xL-SH-2OW" secondAttribute="trailing" id="Opr-IW-q6j"/>
+                            <constraint firstItem="ruk-Ft-FHQ" firstAttribute="leading" secondItem="n2J-vm-W3g" secondAttribute="leading" id="V8N-7h-Nek"/>
+                            <constraint firstItem="2Tm-Uu-Fbb" firstAttribute="top" secondItem="n2J-vm-W3g" secondAttribute="top" constant="22" id="VMd-7l-857"/>
+                            <constraint firstItem="ruk-Ft-FHQ" firstAttribute="bottom" secondItem="6xL-SH-2OW" secondAttribute="bottom" id="lSe-c6-TaE"/>
+                            <constraint firstItem="ruk-Ft-FHQ" firstAttribute="top" secondItem="6xL-SH-2OW" secondAttribute="top" id="vqY-iV-w2f"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n2J-vm-W3g"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Epa-5z-xL2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="888.40579710144937" y="118.52678571428571"/>
+            <point key="canvasLocation" x="560.86956521739137" y="203.57142857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="alert" width="256" height="256"/>
+    </resources>
 </document>
